Closed
Bug 370430
Opened 19 years ago
Closed 19 years ago
[FIX]Adding or removing noframes element causes flashing
Categories
(Core :: Layout: Images, Video, and HTML Frames, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla1.9alpha3
People
(Reporter: martijn.martijn, Assigned: bzbarsky)
References
()
Details
(Keywords: regression, testcase)
Attachments
(2 files)
|
591 bytes,
text/html
|
Details | |
|
4.76 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
See testcase, the page should not flash, but does in current builds (also on branch).
This regressed between 2005-09-05 and 2005-09-06, I think a regression from bug 306660.
Basically, the flashing happens when I add or remove the <noframes> element from the frameset page.
I'm seeing this also in non-dynamic cases, like at the url.
| Assignee | ||
Comment 1•19 years ago
|
||
The removal isn't flashing. The addition is, because we reconstruct the whole frameset (and yes, that's a result of fixing bug 306660).
I suppose we could check for something that's not a frameset/frame here explicitly. You'll still get flashing if you dynamically insert a frame or frameset.
| Reporter | ||
Comment 2•19 years ago
|
||
In reply to comment #1)
> I suppose we could check for something that's not a frameset/frame here
> explicitly. You'll still get flashing if you dynamically insert a frame or
> frameset.
I guess that's a good idea, there is no way that any other element than <frame> or <frameset> get rendered, right?
That's why I specifically filed this bug. <noframes> typically nevers gets rendered at all in Mozilla, so I was surprised it had this kind of effect.
| Assignee | ||
Comment 3•19 years ago
|
||
> there is no way that any other element than <frame> or <frameset> get rendered,
> right?
Right. I agree that reframing when <noframes> gets moved about is silly. ;)
| Assignee | ||
Comment 4•19 years ago
|
||
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Attachment #257003 -
Flags: superreview?(roc)
Attachment #257003 -
Flags: review?(roc)
| Assignee | ||
Comment 5•19 years ago
|
||
I don't really know how to go about creating an automated test for this. :(
Flags: in-testsuite?
Priority: -- → P3
Summary: Adding or removing noframes element causes flashing → [FIX]Adding or removing noframes element causes flashing
Target Milestone: --- → mozilla1.9alpha3
Is this worth doing? We're adding code to avoid reframes in a very special case. But reframes can still happen in general so the flashing problem can still happen.
I presume fixing that requires widget removal. But widget removal would also fix this. So why bother with this patch?
| Assignee | ||
Comment 7•19 years ago
|
||
In this case reframes are very expensive and lossy. I think avoiding them if possible is very much worth it...
Comment on attachment 257003 [details] [diff] [review]
Proposed fix
Alright, given that this happens on a real site...
Attachment #257003 -
Flags: superreview?(roc)
Attachment #257003 -
Flags: superreview+
Attachment #257003 -
Flags: review?(roc)
Attachment #257003 -
Flags: review+
| Assignee | ||
Comment 9•19 years ago
|
||
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Updated•8 years ago
|
Product: Core → Core Graveyard
Updated•7 years ago
|
Component: Layout: HTML Frames → Layout: Images
Product: Core Graveyard → Core
You need to log in
before you can comment on or make changes to this bug.
Description
•