Only reframe a <frameset> frame if adding a child <frame> or <frameset>.  Bug 370430, r+sr=roc